<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">F3O</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_week_frag">WeekFrag</string>
    <string name="dl">Deadlift</string>
    <string name="chinups">Chin Ups</string>
    <string name="rdl">Romanian Deadlift</string>
    <string name="dips">Dips</string>
    <string name="fsquat">Front Squat</string>
    <string name="bsquat">Back Squat</string>
    <string name="calve">Calves</string>
    <string name="ohpress">Overhead Press</string>
    <string name="bpress">Bench Press</string>
    <string name="incdmbpress">Incline Dumbell Press</string>
    <string name="krows">Kroc Rows</string>
    <string name="legraises">Leg Raises</string>
    <string name="fivebyten">5x10</string>
    <string name="fivebyfift">5x15</string>
    <string name="title_activity_settings">Settings</string>
    <string name="save">Save</string>
    <string name="add">+5/+10</string>
    <string name="cancel">Cancel</string>

</resources>
